Fix bugs of menu on small screens

--- a/src/pages/registration/registration.sass
+++ b/src/pages/registration/registration.sass
@@ -8,6 +8,9 @@
   &__header
     position: relative
     z-index: 20
+
+    @media screen and ( max-width:  1000px)
+      position: unset
   
   &__content
     width: 100%
