--- a/src/pages/room/room.sass
+++ b/src/pages/room/room.sass
@@ -9,6 +9,9 @@
     position: relative
     z-index: 20
 
+    @media screen and ( max-width:  1000px)
+      position: unset
+
   &__content
     width: 100%
     box-sizing: border-box
